--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 
 <body onload="onPageLoad()">
-	<section class="hero header-image" style="background-image: url(/spa.jpg); ; background-repeat: no-repeat; background-position: fixed; background-size: 100%;">
+	<section class="hero header-image" style="background-image: url(spa.jpg); ; background-repeat: no-repeat; background-position: fixed; background-size: 100%;">
         <div class="hero-body">
             
           <p class="title">
